fix styles for form on mobile; upgrade packages

--- a/client/src/styles/form.scss
+++ b/client/src/styles/form.scss
@@ -1,3 +1,9 @@
+$breakpoints: (
+    phone: 640px,
+    tablet: 768px,
+    desktop: 1024px
+) !default;
+
 .numberInput {
     width: 110px;
 }
@@ -27,28 +33,35 @@ div[role="tooltip"] {
 }
 
 .ItemEditFormModal {
-    max-width: 80vw;
-    // max-width: fit-content;
-    // min-width: 80em;
-    // .ant-divider-horizontal {
-    //     //
-    // }
-    // .ant-row {
+    max-width: 100vw;
 
-    // }
     .col {
-        max-width: 50%;
+        @include desktop {
+            max-width: 50%;
+        }
+        flex: 0 0 80%;
+        margin: 1em;
         // style={{ flexFlow: 'column wrap;'}}
     }
+
+    span {
+        max-width: 100vw;
+    }
+    & .ant-select-selector {
+        max-width: 100vw;
+    }
     input {
-        max-width: 100%;
+        max-width: 100vw;
     }
     form {
         flex-flow: column wrap;
         display: flex;
-        max-height: 70em;
+
+        @include desktop {
+            max-height: 90vh;
+        }
     }
-    
+
     /* Chrome, Safari, Edge, Opera */
     input[type="number"]::-webkit-outer-spin-button,
     input[type="number"]::-webkit-inner-spin-button {
@@ -60,8 +73,7 @@ div[role="tooltip"] {
         -moz-appearance: textfield;
     }
 
-
-    .screw-size-input {
+    // .screw-size-input {
         // border: none;
         // & div {
         //     border: none;
@@ -72,8 +84,6 @@ div[role="tooltip"] {
         // .ant-input-group-addon {
         //     border: none;
         // }
-
-
         // /* Chrome, Safari, Edge, Opera */
         // input[type="number"]::-webkit-outer-spin-button,
         // input[type="number"]::-webkit-inner-spin-button {
@@ -84,5 +94,5 @@ div[role="tooltip"] {
         // input[type="number"] {
         //     -moz-appearance: textfield;
         // }
-    }
+    // }
 }
